--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
   - Overview:
       - Executive Summary: 01-overview/summary.md
       - Business Benefits: 01-overview/scenarios.md
-      - Typical Scenarios: 01-overview/typical-scenarios.md
+      - Typical Scenarios: 01-overview/scenarios.md
 
   - Use Cases:
       - Remote User Onboarding: 02-use-cases/onboarding.md
