--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,9 @@
 site_name: Entra Verified ID Jump Start Guide
 site_description: A guide to get you started on Verified ID Facecheck with commonly used scenarios, use cases and other setup details
-site_author: Microsoft
+site_author: Vik Verma
+
+extra_css:
+  - stylesheets/extra.css
 
 docs_dir: docs
 site_dir: site
